Стилизация мелких деталей
Стилизация мелких деталей, привел в порядок код.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 				<section class="map">
 					<h2 class="visually-hidden">Карта</h2>
-					
+					<!-- Карта -->
 				</section>
 
 			</main>
