--- a/hotels.html
+++ b/hotels.html
@@ -93,7 +93,7 @@
 										<div class="range-toggle range-toggle-max"></div>
 									</div>
 								</fieldset>
-								<button class="filter-button" type="submit">Показать</button>
+								<button class="filter-button" type="submit"><span>Показать</span></button>
 							</div>
 						</form>
 				</section>
