--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<span class="visually-hidden">Увеличить</span>
 								</button>
 							</p>
-							<button class="hotel-find-button" type="submit">Найти</button>
+							<button class="hotel-find-button" type="submit"><span>Найти</span></button>
 						</form>
 					</div>
 				</section>
