--- a/index.html
+++ b/index.html
@@ -99,27 +99,27 @@
 					<p class="offers-description-header">Заинтересовались?</p>
 					<p class="offers-description-body">Укажите предполагаемые даты поездки,<br>
 						и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-					<button class="hotel-search-button"><span>Поиск гостиницы в Седоне<span></button>
+					<button class="hotel-search-button"><span>Поиск гостиницы в Седоне</span></button>
 				</section>
 
 				<section class="map">
 					<div class="modal-hotel-search">
 						<form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="get">
-							<p class="hotel-search-form-item">
+							<div class="hotel-search-form-item">
 								<label for="arrival-date">Дата заезда:</label>
 								<input type="text" name="arrival-date" id="arrival-date" placeholder="24 апреля 2017" required>
 								<button class="button-calendar" type="button">
 									<span class="visually-hidden">Календарь</span>
 								</button>
-							</p>
-							<p class="hotel-search-form-item">
+							</div>
+							<div class="hotel-search-form-item">
 								<label for="leaving-date">Дата выезда:</label>
 								<input type="text" name="leaving-date" id="leaving-date" placeholder="4 июля 2017" required>
 								<button class="button-calendar" type="button">
 									<span class="visually-hidden">Календарь</span>
 								</button>
-							</p>
-							<p class="hotel-search-form-item">
+							</div>
+							<div class="hotel-search-form-item">
 								<label for="adult-count">Взрослые:</label>
 								<button class="button-menus adult-button" type="button">
 									<span class="visually-hidden">Уменьшить</span>
@@ -136,12 +136,12 @@
 								<button class="button-plus child-button" type="button">
 									<span class="visually-hidden">Увеличить</span>
 								</button>
-							</p>
-							<button class="hotel-find-button" type="submit"><span>Найти<span></button>
+							</div>
+							<button class="hotel-find-button" type="submit"><span>Найти</span></button>
 						</form>
 					</div>
 					<h2 class="visually-hidden">Карта</h2>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8883463296!2d-112.35552755251767!3d34.854373356423885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1512217283379" width="100%" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8883463296!2d-112.35552755251767!3d34.854373356423885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1512217283379" frameborder="0" allowfullscreen></iframe>
 				</section>
 
 			</main>
