--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 					<p class="features-description-header">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
 					<p class="features-description-body">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 					<ul class="features-list">
-						<li class="feature-item-with-image">
+						<li class="feature-item-with-image fiwi-left">
 							<div class="for-pseudo-feature">
 								<h3>Настоящий городок</h3>
 								<p>— №1 —</p>
 								<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
 							</div>
 						</li>
-						<li class="feature-item-with-image">
+						<li class="feature-item-with-image fiwi-right">
 							<div class="for-pseudo-feature">
 								<h3>Там есть<br>мост дьявола</h3>
 								<p>— №2 —</p>
@@ -77,15 +77,15 @@
 						</li>
 						<li class="more-features">
 							<ul class="more-features-list">
-								<li class="more-features-item">
+								<li class="more-features-item housing">
 									<h3>Жилье</h3>
 									<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 								</li>
-								<li class="more-features-item">
+								<li class="more-features-item food">
 									<h3>Еда</h3>
 									<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 								</li>
-								<li class="more-features-item">
+								<li class="more-features-item souvenirs">
 									<h3>Сувениры</h3>
 									<p>Не только китайского, но и местного производства!</p>
 								</li>
@@ -151,17 +151,17 @@
 					<a href="">#visitsedona</a>
 				</p>
 				<ul class="footer-social">
-					<li class="footer-social-item">
+					<li class="footer-social-item twitter">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">Twitter</span>
 						</a>
 					</li>
-					<li class="footer-social-item">
+					<li class="footer-social-item facebook">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">Facebook</span>
 						</a>
 					</li>
-					<li class="footer-social-item">
+					<li class="footer-social-item youtube">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">YouTube</span>
 						</a>
