--- a/hotels.html
+++ b/hotels.html
@@ -230,17 +230,17 @@
 					<a href="">#visitsedona</a>
 				</p>
 				<ul class="footer-social">
-					<li class="footer-social-item">
+					<li class="footer-social-item twitter">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">Twitter</span>
 						</a>
 					</li>
-					<li class="footer-social-item">
+					<li class="footer-social-item facebook">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">Facebook</span>
 						</a>
 					</li>
-					<li class="footer-social-item">
+					<li class="footer-social-item youtube">
 						<a class="social-button" href="#">
 							<span class="visually-hidden">YouTube</span>
 						</a>
