--- a/hotels.html
+++ b/hotels.html
@@ -101,10 +101,7 @@
 				<section class="hotels-filter-results">
 						<h2 class="visually-hidden">Результаты фильтрации</h2>
 						<div class="filter-info-container content-container">
-							<p class="filter-result-count">
-								Найдено:
-								<span>3</span>
-							</p>
+							<p class="filter-result-count">Найдено: 3</p>
 							<p class="filter-result-sorting">Сортировка:</p>
 							<ul class="sorting-type-list">
 								<li>
@@ -144,7 +141,7 @@
 												<a class="more-info-button" href="#">Подробнее</a>
 											</div>
 											<div class="detail-description-container">
-												<p class="hotel-price">От <span>4000</span> р.</p>
+												<p class="hotel-price">От 4000 р.</p>
 												<a class="reservation-button" href="#">Забронировать</a>
 											</div>
 										</div>
@@ -153,10 +150,7 @@
 										<p class="hotel-stars four-star">
 											<span class="visually-hidden">4 Звезды</span>
 										</p>
-										<p class="hotel-rating">
-											Рейтинг:
-											<span>8,5</span>
-										</p>
+										<p class="hotel-rating">Рейтинг: 8,5</p>
 									</div>
 								</div>
 							</li>
@@ -173,7 +167,7 @@
 												<a class="more-info-button" href="#">Подробнее</a>
 											</div>
 											<div class="detail-description-container">
-												<p class="hotel-price">От <span>3000</span> р.</p>
+												<p class="hotel-price">От 3000 р.</p>
 												<a class="reservation-button" href="#">Забронировать</a>
 											</div>
 										</div>
@@ -183,10 +177,7 @@
 										<p class="hotel-stars three-star">
 											<span class="visually-hidden">3 Звезды</span>
 										</p>
-										<p class="hotel-rating">
-											Рейтинг: 
-											<span>8,9</span>
-										</p>
+										<p class="hotel-rating">Рейтинг: 8,9</p>
 									</div>
 								</div>
 							</li>
@@ -203,7 +194,7 @@
 												<a class="more-info-button" href="#">Подробнее</a>
 											</div>
 											<div class="detail-description-container">
-												<p class="hotel-price">От <span>2000</span> р.</p>
+												<p class="hotel-price">От 2000 р.</p>
 												<a class="reservation-button" href="#">Забронировать</a>
 											</div>
 										</div>
@@ -213,10 +204,7 @@
 										<p class="hotel-stars two-star">
 											<span class="visually-hidden">2 Звезды</span>
 										</p>
-										<p class="hotel-rating">
-											Рейтинг: 
-											<span>9,2</span>
-										</p>
+										<p class="hotel-rating">Рейтинг: 9,2</p>
 									</div>
 								</div>
 							</li>
@@ -256,6 +244,6 @@
 			</footer>
 
 		</div>
-		<!--<script src="js/script.js"></script>-->
+		<script src="js/script.js"></script>
 	</body>
 </html>
