--- a/hotels.html
+++ b/hotels.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>Гостиницы</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize-min.css">
+		<link rel="stylesheet" href="css/style-min.css">
 		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
