--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>Седона</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize-min.css">
+		<link rel="stylesheet" href="css/style-min.css">
 		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
@@ -134,7 +134,7 @@
 						</form>
 					</div>
 					<h2 class="visually-hidden">Карта</h2>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8883463296!2d-112.35552755251767!3d34.854373356423885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1512217283379" frameBorder="0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8883463296!2d-112.35552755251767!3d34.854373356423885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1512217283379" allowfullscreen></iframe>
 				</section>
 			</main>
 			<footer class="main-footer index-footer">
@@ -167,6 +167,6 @@
 				</p>
 			</footer>
 		</div>
-		<script src="js/script.js"></script>
+		<script src="js/script-min.js"></script>
 	</body>
 </html>
