Правки согласно замечаниям

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 						</li>
 						<li class="feature-item-with-image fiwi-right">
 							<div class="for-pseudo-feature">
-								<h3>Там есть<br>мост дьявола</h3>
+								<h3>Там&nbsp;есть мост&nbsp;дьявола</h3>
 								<p>— №2 —</p>
-								<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+								<p>Да, по нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
 							</div>
 						</li>
 						<li class="feature-item">
 							<h3>Небольшая площадь</h3>
 							<p>— №3 —</p>
-							<p>Все достопримечательности находятся очень близко</p>
+							<p>Все достопримеча&shy;тельности находятся очень близко</p>
 						</li>
 						<li class="feature-item">
 							<h3>Красивая дорога</h3>
 							<p>— №4 —</p>
-							<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+							<p>Ехать в Седону из Лас&#8209;Вегаса совсем не&nbsp;скучно!</p>
 						</li>
 						<li class="feature-item">
 							<h3>Мало туристов</h3>
@@ -75,15 +75,15 @@
 							<ul class="more-features-list">
 								<li class="more-features-item housing">
 									<h3>Жилье</h3>
-									<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+									<p>Рекомендуем пожить в&nbsp;настоящем мотеле, все&nbsp;как в кино!</p>
 								</li>
 								<li class="more-features-item food">
 									<h3>Еда</h3>
-									<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+									<p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
 								</li>
 								<li class="more-features-item souvenirs">
 									<h3>Сувениры</h3>
-									<p>Не только китайского, но и местного производства!</p>
+									<p>Не только китайского, но&nbsp;и местного производства!</p>
 								</li>
 							</ul>
 						</li>
@@ -92,7 +92,7 @@
 				<section class="offers">
 					<h2 class="visually-hidden">Предложения</h2>
 					<p class="offers-description-header">Заинтересовались?</p>
-					<p class="offers-description-body">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+					<p class="offers-description-body">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие&nbsp;предложения гостиниц в Седоне</p>
 					<button class="hotel-search-button"><span>Поиск гостиницы в Седоне</span></button>
 				</section>
 				<section class="map">
